[gd_scene load_steps=8 format=3 uid="uid://dtp70q7do75f1"]

[ext_resource type="Script" path="res://Assets/3dModels/Interactables/Photos/Photo-Interact.gd" id="1_fvu1i"]
[ext_resource type="Texture2D" uid="uid://bgp5u0tkb0vqj" path="res://icon.svg" id="1_p2lr2"]
[ext_resource type="Texture2D" uid="uid://wwsswoyn10w1" path="res://Assets/2dIcons/KeyBoard&Mouse_Icons/keyboard_q.png" id="3_2b0ex"]

[sub_resource type="PlaneMesh" id="PlaneMesh_eamv4"]
size = Vector2(0.5, 0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_daxy7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idhac"]
bg_color = Color(0.109804, 0.109804, 0.109804, 0.584314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_613pq"]
bg_color = Color(0.0911214, 0.0911215, 0.0911214, 1)

[node name="Photo" type="Node3D" node_paths=PackedStringArray("interact_menu", "interact_icon")]
script = ExtResource("1_fvu1i")
interact_menu = NodePath("Control/interact_ui")
interact_icon = NodePath("Control")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_eamv4")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_daxy7")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="interact_icon" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -168.0
offset_right = 32.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_2b0ex")

[node name="Label" type="Label" parent="Control/interact_icon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = 48.0
offset_right = 54.5
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Look At"

[node name="interact_ui" type="CanvasLayer" parent="Control"]
visible = false

[node name="Backdrop" type="Panel" parent="Control/interact_ui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_idhac")

[node name="Photo" type="Panel" parent="Control/interact_ui/Backdrop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -224.0
offset_right = 100.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.261799
theme_override_styles/panel = SubResource("StyleBoxFlat_613pq")

[node name="TextureRect" type="TextureRect" parent="Control/interact_ui/Backdrop/Photo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -81.0
offset_right = 64.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_p2lr2")

[node name="Label" type="Label" parent="Control/interact_ui/Backdrop/Photo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -54.0
offset_right = 59.0
offset_bottom = -1.52588e-05
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Family"
horizontal_alignment = 1

[connection signal="area_entered" from="Area3D" to="." method="_on_photo_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_photo_area_exited"]
